<resources>
    <string name="app_name">NT App</string>
    <color name="myColor">#F5F5F5</color>
    <string name="stgSettings">Einstellungen</string>
    <string name="stgRemotePlugs">Funksteckdosen</string>
    <string name="go_home">Startseite</string>
    <string name="stgSkimmer1">Skimmer</string>
    <string name="stgPumpe1">Pumpe (Einlauf)</string>
    <string name="stgStrahler1">Strahler (Amphore)</string>
    <string name="stgDeselectAll">keine auswählen</string>
    <string name="stgSelectAll">alle auswählen</string>
    <string name="stgSwitchOn">einschalten</string>
    <string name="stgSwitchOff">ausschalten</string>
    <string name="title_socket_list">Funksteckdosen</string>
    <string name="title_socket_detail">Funksteckdose Detail</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->
    <string name="pref_default_wifiname">wifi-extension-v</string>
    <string name="pref_default_wifiport">4223</string>
    <string name="pref_default_brickid">v1T</string>

    <!-- Hardware settings -->
    <string name="pref_title_WiFi_name">WiFi Name</string>
    <string name="pref_title_WiFi_port">WiFi Port</string>
    <string name="pref_title_Brick_id">Brick ID</string>

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_header_hardware">Hardware</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_socket">Funksteckdosen</string>
    <string name="title_activity_main2">Main2Activity</string>


</resources>
