<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">


    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_wifiname"
        android:inputType="textCapWords"
        android:key="wifi_name"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_WiFi_name"/>

    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_wifiport"
        android:inputType="textCapWords"
        android:key="wifi_port"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_WiFi_port"/>

    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_brickid"
        android:inputType="textCapWords"
        android:key="brick_id"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_Brick_id"/>

    <!--
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="exampleSockets"
        android:summary="!!! Die bestehenden Daten werden gelöscht und durch Beispieldaten ersetzt"
        android:title="Beispieldaten" >
    </CheckBoxPreference>
    -->


    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <!--
    <ListPreference
        android:defaultValue="180"
        android:entries="@array/pref_sync_frequency_titles"
        android:entryValues="@array/pref_sync_frequency_values"
        android:key="sync_frequency"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_sync_frequency"/>
        -->

    <!-- This preference simply launches an intent when selected. Use this UI sparingly, per
         design guidelines. -->
    <!--
    <Preference android:title="@string/pref_title_system_sync_settings">
        <intent android:action="android.settings.SYNC_SETTINGS"/>
    </Preference>
    -->

</PreferenceScreen>
