<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="naturtalent.it.naturtalentapp.socketActivity.SocketActivity"
    tools:showIn="@layout/socket_activity">

    <!-- Filter -->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayoutFilter">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Filter"
            android:id="@+id/textView4"/>

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spinnerFilter"
            android:spinnerMode="dropdown"/>
    </LinearLayout>

    <!-- SchalterListe -->

    <ScrollView
        android:id="@+id/scrollListView"
        android:layout_below="@+id/linearLayoutFilter"
        android:layout_width="200dip"
        android:layout_height="200dip"
        android:padding="8dip"
        android:scrollbarStyle="insideOverlay"
        android:background="@android:color/white"
        android:overScrollMode="never">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayoutFilter"
        android:id="@+id/linearListLayout"
        android:weightSum="1">

        <ListView
            android:layout_width="wrap_content"
            android:layout_height="250dp"
            android:id="@+id/socketListView"
            android:layout_marginTop="20dp"
            android:background="@color/background_material_light"
            android:layout_weight="4.90" />
    </LinearLayout>

    </ScrollView>

    <!-- alle/keine auswaehlen -->
    <LinearLayout
        android:id="@+id/linearLayoutSelectAll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/scrollListView"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnAllSelect"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:onClick="onClick"
            android:text="@string/stgSelectAll"
            android:textSize="10dp"/>

        <Button
            android:id="@+id/btnAllDeselect"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:onClick="onClick"
            android:text="@string/stgDeselectAll"
            android:textSize="10dp"/>

    </LinearLayout>


    <!-- ein-/ausschalten -->
    <LinearLayout
        android:id="@+id/linearLayoutSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/linearLayoutSelectAll"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_action_process_start"
            android:enabled="false"
            android:onClick="onClick"
            android:text="@string/stgSwitchOn"/>

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/ic_action_process_end"
            android:enabled="false"
            android:onClick="onClick"
            android:text="@string/stgSwitchOff"/>

    </LinearLayout>


</RelativeLayout>
